--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -64,7 +64,6 @@
        "      <th>Item ID</th>\n",
        "      <th>Item Name</th>\n",
        "      <th>Price</th>\n",
-       "      <th>Age Ranges</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -77,7 +76,6 @@
        "      <td>108</td>\n",
        "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
        "      <td>3.53</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -88,7 +86,6 @@
        "      <td>143</td>\n",
        "      <td>Frenzied Scimitar</td>\n",
        "      <td>1.56</td>\n",
-       "      <td>40+</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -99,7 +96,6 @@
        "      <td>92</td>\n",
        "      <td>Final Critic</td>\n",
        "      <td>4.88</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -110,7 +106,6 @@
        "      <td>100</td>\n",
        "      <td>Blindscythe</td>\n",
        "      <td>3.27</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -121,11 +116,9 @@
        "      <td>131</td>\n",
        "      <td>Fury</td>\n",
        "      <td>1.44</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -143,7 +136,6 @@
        "      <td>60</td>\n",
        "      <td>Wolf</td>\n",
        "      <td>3.54</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>776</th>\n",
@@ -154,7 +146,6 @@
        "      <td>164</td>\n",
        "      <td>Exiled Doomblade</td>\n",
        "      <td>1.63</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>777</th>\n",
@@ -165,7 +156,6 @@
        "      <td>67</td>\n",
        "      <td>Celeste, Incarnation of the Corrupted</td>\n",
        "      <td>3.46</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>778</th>\n",
@@ -176,7 +166,6 @@
        "      <td>92</td>\n",
        "      <td>Final Critic</td>\n",
        "      <td>4.19</td>\n",
-       "      <td>&lt;10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>779</th>\n",
@@ -187,11 +176,10 @@
        "      <td>50</td>\n",
        "      <td>Dawn</td>\n",
        "      <td>4.60</td>\n",
-       "      <td>20-24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>780 rows × 8 columns</p>\n",
+       "<p>780 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -208,23 +196,23 @@
        "778          778        Sisur91    7    Male       92   \n",
        "779          779      Ennrian78   24    Male       50   \n",
        "\n",
-       "                                     Item Name  Price Age Ranges  \n",
-       "0    Extraction, Quickblade Of Trembling Hands   3.53      20-24  \n",
-       "1                            Frenzied Scimitar   1.56        40+  \n",
-       "2                                 Final Critic   4.88      20-24  \n",
-       "3                                  Blindscythe   3.27      20-24  \n",
-       "4                                         Fury   1.44      20-24  \n",
-       "..                                         ...    ...        ...  \n",
-       "775                                       Wolf   3.54      20-24  \n",
-       "776                           Exiled Doomblade   1.63      20-24  \n",
-       "777      Celeste, Incarnation of the Corrupted   3.46      20-24  \n",
-       "778                               Final Critic   4.19        <10  \n",
-       "779                                       Dawn   4.60      20-24  \n",
+       "                                     Item Name  Price  \n",
+       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                            Frenzied Scimitar   1.56  \n",
+       "2                                 Final Critic   4.88  \n",
+       "3                                  Blindscythe   3.27  \n",
+       "4                                         Fury   1.44  \n",
+       "..                                         ...    ...  \n",
+       "775                                       Wolf   3.54  \n",
+       "776                           Exiled Doomblade   1.63  \n",
+       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
+       "778                               Final Critic   4.19  \n",
+       "779                                       Dawn   4.60  \n",
        "\n",
-       "[780 rows x 8 columns]"
+       "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1066,7 @@
     "top_spenders[\"Total Purchase Value\"] = top_spenders[\"Total Purchase Value\"].map(\"${0:.2f}\".format)\n",
     "\n",
     "#Make dataframe looking at the users who made the most purchases\n",
-    "top_spenders.sort_values(\"Purchase Count\", ascending=False).head()"
+    "top_spenders.sort_values(\"Purchase Count\", ascending=False).head(5)"
    ]
   },
   {
@@ -1219,12 +1207,12 @@
     "\n",
     "\n",
     "#Make dataframe looking at the users who made the most popular items\n",
-    "popular_items.sort_values(\"Purchase Count\", ascending=False).head()"
+    "popular_items.sort_values(\"Purchase Count\", ascending=False).head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1315,7 @@
        "103     Singed Scalpel                                               34.80  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,12 +1324,12 @@
     "# Switch sort values to Total Purchase value in descending order\n",
     "popular_items_value = popular_items.sort_values(\"Total Purchase Value\", ascending=False)\n",
     "\n",
-    "popular_items_value.head()"
+    "popular_items_value.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,6 +1339,27 @@
     "# Second, more people between the ages of 15-30 play the game than any other ages(77.18%). Almost half of all players are between 20-24 (46.79%).\n",
     "# Third, the most popular item to purchase is the Final Critic. It has the most purchases(13), as well as, the highest total purchase value ($59.99)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
